# fiducia-node.rs

./: .gitignore  Cargo.toml  Dockerfile  README.md
.cargo-target-reportwt/: .rustc_info.json
.cargo-target-reportwt/debug/: fiducia-node.d
.cargo-target-reportwt/debug/.fingerprint/anyhow-19e40aa9b5f57496/: run-build-script-build-script-build  run-build-script-build-script-build.json
.cargo-target-reportwt/debug/.fingerprint/anyhow-d15c255b9cc3f966/: lib-anyhow  lib-anyhow.json
.cargo-target-reportwt/debug/.fingerprint/anyhow-d1fd26b0f9c3b779/: build-script-build-script-build  build-script-build-script-build.json
.cargo-target-reportwt/debug/.fingerprint/async-stream-198a535dbbf09647/: lib-async_stream  lib-async_stream.json
.cargo-target-reportwt/debug/.fingerprint/async-stream-impl-bc269341df8b5616/: lib-async_stream_impl  lib-async_stream_impl.json
.cargo-target-reportwt/debug/.fingerprint/async-trait-66290ac424c65065/: lib-async_trait  lib-async_trait.json
.cargo-target-reportwt/debug/.fingerprint/atomic-waker-055cf4d59c7eadc0/: lib-atomic_waker  lib-atomic_waker.json
.cargo-target-reportwt/debug/.fingerprint/autocfg-7c9413c463496fec/: lib-autocfg  lib-autocfg.json
.github/workflows/: docker.yml
docs/: storage.md
src/: consensus.rs  cron.rs  discovery.rs  election.rs  idempotency.rs  indexed_queue.rs  internal_auth.rs  kv.rs  locks.rs  main.rs  metrics.rs  observe.rs  persist.rs  raft_api.rs  rate_limit.rs  ratelimit.rs  schedule.rs  schedule_runner.rs  semaphore.rs  state.rs  transport.rs  validate.rs
tests/: live_coordination_smoke.rs
(+311 files in other folders)
